- 16/04/2021
24. svctool: added checks when enabling, disabling service
- 18/04/2021
25. date822fmt() moved to libqmail
- 20/04/2021
26. svctool - make output less verbose with --silent parameter
27. minisvc - honour --silent in export variables
- 22/04/2021
28. svctool - fixed check_libmysqlclient_lib function
- 28/04/2021
29. svctool - allow --force to override norefreshsvc flag for a service

* Sunday 14 February 2021 07:46:33 PM IST
Release 2.12 Start 21/05/2020
- 12/09/2020
01. hier.c: use 0755 for bin and sbin
02. indimail-mta: replaced setup with installer which uses text files for
    installation
03. indimail-mta.spec: fixed AutoReq
- 13/09/2020
04. indimail-mta.spec: updated compiler flags for ucspi-tcp
05. ucspi-tcp: replaced setup with installer which uses text files for
    installation
06. ucspi-tcp: updated compiler switches
07. instcheck.c: skip chmod if mode is -1
08. hier.c: leave owner, group, permissions alone as they are owned by
    indimail-mta package
09. installer.c: sync permissions with indimail-mta.spec file
- 14/09/2020
10. fixed linkat(), unlinkat(), renameat() calls
- 15/09/2020
11. leapsecs.txt: added date 2016-12-31
12. moved to libqmail:  mess822.h, mess822_addr.c, mess822_date.c,
    mess822_fold.c, mess822_line.c, mess822_ok.c, mess822_quote.c,
    mess822_token.c, mess822_when.c, mess822.3 mess822_addr.3,
    mess822_date.3, mess822_fold.3, mess822_quote.3, mess822_token.3,
    mess822_when.3
13. moved to libqmail: commands.c, commands.h, rewritehost.c, rewritehost.h,
    rewritehost.3
14. smtpd.c, ofmpid.c: variable ctl_maxcmdlen moved to libqmail
15. moved to libqmail: sconfig.c, sconfig.h
16. qmail-send.c, qmail-todo.c: use control files conf-fsync, conf-syncdir
    to turn on fsync, bsd style syncdir semantics
17. qmail-send.c, qmail-todo.c: set / unset USE_FSYNC, USE_SYNCDIR env
    variables
18. qmail-queue.c, qmail-local.c: changed default value of use_fsync,
    use_syncdir to -1
- 16/09/2020