@@ -46,7 +46,7 @@ the integers defined by environment variables \fBQUEUE_START\fR and \fBQUEUE_COU
 
 Setting QUEUE_COUNT=2, QUEUE_START=1 will make \fBqmail-daemon\fR run two instances of
 \fBqmail-send\fR and \fBqmail-todo\fR. The first \fBqmail-send\fR, \fBqmail-todo\fR instance will use the
-queue QMAIL/queue/queue1 and the second instance will use QMAIL/queue/queue2
+queue QMAILHOME/queue/queue1 and the second instance will use QMAILHOME/queue/queue2
 
 .B qmail-daemon
 also monitors \fBqmail-send\fR and \fBqmail-todo\fR and restart them if they goes down.
