@@ -8,7 +8,7 @@ qmail-todo \- process todo messages from the queue
 handles todo messages placed into the outgoing queue by
 .B qmail-queue.
 .B qmail-todo
-by default looks at QMAIL/queue for messages. This path can be changed by defining the QUEUEDIR
+by default looks at QMAILHOME/queue for messages. This path can be changed by defining the QUEUEDIR
 environment variable.
 
 .B qmail-todo
