@@ -93,7 +93,7 @@ assignment, and a simple assignment overrides any wildcard assignment.
 For example:
 
 .EX
-   +:alias:7790:2108:QMAIL/alias:-::
+   +:alias:7790:2108:QMAILHOME/alias:-::
    +joe-:joe:507:100:/home/joe:-::
    =joe:joe:507:100:/home/joe:::
 .EE
